--- a/frontend-code-challenge-master/public/admin.html
+++ b/frontend-code-challenge-master/public/admin.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset=utf-8>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/united/bootstrap.min.css">
   <!-- using jQuery -->
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
@@ -13,12 +14,12 @@
 </head>
 
 <body>
-  List user data here
   <!-- in js file make call to backend? -->
-  <ol>
-    <!-- admin.js should create li of each user's first and last name -->
-
-  </ol>
+  <div class="userName-list-container">
+    <ol class="userName-list">
+      <!-- admin.js should create li of each user's first and last name -->
+    </ol>
+  </div>
 </body>
 
 </html>
