--- a/frontend-code-challenge-master/public/signup.html
+++ b/frontend-code-challenge-master/public/signup.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset=utf-8>
   <title>Yodlr Registration Portal</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/united/bootstrap.min.css">
+  <link rel="stylesheet" href="css/signup.css">
+  <!-- using jQuery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src='js/signup.js'></script>
 </head>
+
 <body>
-  <h1>Yodlr Registration Portal</h1>
-  <form>
-    Email: <input type="email" name="email"></br>
-    <button type="submit">Submit</button>
-  </form>
+  <div class="sign-up-content-wrapper">
+    <h1 class="title">Yodlr Registration Portal</h1>
+    <div class="form-container">
+      <form class="user-form">
+        <div class="form-group email-sign-up">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="Enter email now!">
+        </div>
+        <div class="form-group firstName-sign-up">
+          <label for="firstName">First Name</label>
+          <input type="text" class="form-control" id="firstName" placeholder="First Name">
+        </div>
+        <div class="form-group lastName-sign-up">
+          <label for="lastName">Last Name</label>
+          <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  </div>
   <p>
     <a href="/admin.html">Admin Page</a>
   </p>
 </body>
+
 </html>
