adding more algorithms examples

--- a/frontend-code-challenge-master/public/admin.html
+++ b/frontend-code-challenge-master/public/admin.html
@@ -16,11 +16,24 @@
 
 <body>
   <!-- in js file make call to backend? -->
+  <!-- make a table with bootstrap-->
+  <h3>List of Users</h3>
   <div class="userName-list-container">
-    <h3>List of Users</h3>
-    <ol class="userName-list">
-      <!-- admin.js should create li of each user's first and last name -->
-    </ol>
+      <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First</th>
+              <th scope="col">Last</th>
+              <th scope="col">Email</th>
+              <th scope="col">State</th>
+              <th scope="col">Edit</th>
+            </tr>
+          </thead>
+          <tbody class="table-data">
+          </tbody>
+        </table>
+
   </div>
 </body>
 
