--- a/frontend-code-challenge-master/public/index.html
+++ b/frontend-code-challenge-master/public/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
   <meta charset=utf-8>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/united/bootstrap.min.css">
+  <link rel="stylesheet" href="css/index.css">
+  <!-- using jQuery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src='js/index.js'></script>
   <title>Yodlr Design Challenge</title>
 </head>
 <body>
