websockets and more algorithm practice

--- a/outcomes_practice/css/test.html
+++ b/outcomes_practice/css/test.html
@@ -20,6 +20,10 @@
     </div>
   </div>
 
+  <div class="pink"></div>
+  <div class="pink"></div>
+  <div class="pink"></div>
+
   <style>
   /* div{color: red;} 
   .elem { color: green;}
@@ -52,6 +56,14 @@
 
   .wrapper > div {
     background-color: magenta;;
+  }
+
+  .pink {
+    background-color: pink;
+    display: inline-block;
+    margin: 10px;
+    height: 100px;
+    width: 100px;
   }
 
   </style>
