--- a/outcomes_practice/websockets/more-chat/public/index.html
+++ b/outcomes_practice/websockets/more-chat/public/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
   <div id="mario-chat">
+    <!-- where the chat window will be -->
     <div id="chat-window">
       <div id="output"></div>
+      <div id="feedback"></div>
     </div>
+    <!-- these are the input fields and button to listen for chat -->
     <input type="text" id="handle" placeholder="Handle">
     <input type="text" id="message" placeholder="Message">
     <button id="send">Send</button>
